--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,10 +21,10 @@ linters:
     enable:
         - gofmt # форматирование кода (пробелы, отступы, скобки)
         - goimports # обновление списка imports
-        - govet # общий анализ возможных багов
+#        - govet # общий анализ возможных багов
         - goconst # нахождение строк, которые следует вынести в константы
         - funlen # детектирование слишком крупных функций
-        - bodyclose # проверка на незакрытые body после чтения тела ответа
+#        - bodyclose # проверка на незакрытые body после чтения тела ответа
         - errcheck # проверка на обработку всех ошибок
         - deadcode # детектирование не использованного кода
         - exportloopref # детектирование экспорта указателя на переменную внутри цикла
