--- a/lesson3/hw3.yaml
+++ b/lesson3/hw3.yaml
@@ -29,6 +29,31 @@ components:
           format: int64
         image_link:
           type: string
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        itemId:
+          type: integer
+          format: int64
+        quantity:
+          type: integer
+          format: int32
+        shipDate:
+          type: string
+          format: date-time
+        status:
+          type: string
+          description: Order Status
+          enum:
+            - placed
+            - approved
+            - delivered
+        complete:
+          type: boolean
+          default: false
   securitySchemes:
     api_key:
       type: "apiKey"
@@ -79,17 +104,13 @@ paths:
     post:
       summary: "Add a new item to the store"
       operationId: "CreateItem"
-      consumes:
-        - "application/json"
-      produces:
-        - "application/json"
-      parameters:
-        - in: "body"
-          name: "body"
-          description: "Item object that needs to be added to the store"
-          required: true
-          schema:
-            $ref: "#/definitions/Item"
+      description: "Item object that needs to be added to the store"
+      requestBody:
+        required: true
+        content:
+          "application/json":
+            schema:
+              $ref: '#/components/schemas/Item'
       responses:
         "405":
           description: "Invalid input"
@@ -129,22 +150,23 @@ paths:
     post:
       summary: "uploads an image"
       operationId: "uploadFile"
-      consumes:
-        - "multipart/form-data"
-      produces:
-        - "application/json"
-      parameters:
-        - name: "additionalMetadata"
-          in: "formData"
-          description: "Additional data to pass to server"
-          required: true
-          type: "string"
-        - name: "file"
-          in: "formData"
-          description: "file to upload"
-          required: true
-          type: "file"
+      description: "Additional data to pass to server"
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                additionalMetadata:
+                  type: string
+                fileName:
+                  description: "file to upload"
+                  type: string
+                  format: binary
       responses:
+        201:
+          description: "file uploaded"
       security:
         - api_key: []
   /items/{itemId}:
@@ -217,3 +239,110 @@ paths:
           content: {}
       security:
         - api_key: []
+  /orders:
+    post:
+      summary: Place an order for a item
+      operationId: placeOrder
+      requestBody:
+        required: true
+        description: order placed for purchasing the item
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Order'
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        400:
+          description: Invalid Order
+          content: { }
+    get:
+      summary: Lists Orders sorted by date
+      operationId: ListSortedOrders
+      parameters:
+        - name: sorted
+          in: query
+          description: Flag to sort
+          required: false
+          schema:
+            type: boolean
+            default: false
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Order'
+        400:
+          description: Invalid date
+          content: { }
+        404:
+          description: Orders not found
+          content: { }
+      security:
+        - api_key: [ ]
+  /orders/{orderId}:
+    get:
+      summary: Find purchase order by ID
+      description: For valid response try integer IDs
+      operationId: getOrderById
+      parameters:
+        - name: orderId
+          in: path
+          description: ID of item that needs to be fetched
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        400:
+          description: Invalid ID supplied
+          content: { }
+        404:
+          description: Order not found
+          content: { }
+      security:
+        - api_key: [ ]
+    put:
+      summary: Update an existing order
+      operationId: updateOrder
+      parameters:
+        - name: orderId
+          in: path
+          description: ID of order that needs to be updated
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Order to be update
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Order'
+        required: true
+      responses:
+        400:
+          description: Invalid orderID supplied
+          content: {}
+        404:
+          description: Order not found
+          content: {}
+        405:
+          description: Validation exception
+          content: {}
+      security:
+        - api_key: [ ]
